# NoRevenge

./: CMakeLists.txt  README.md
res/font/: README.txt
res/mockup/: button.aseprite  le_fish_studio_title.aseprite  logo.aseprite  menu.aseprite  title.aseprite
res/palettes/: oil-oak.pal
src/: core.c  core.h  logo.c  logo.h  main.c  menu.c  menu.h  sprite.c  sprite.h
